z-index issue on h2 in form

--- a/styles.css
+++ b/styles.css
@@ -1441,6 +1441,10 @@ footer {
         object-fit: fill;
     }
 
+    .form__form-container h2 {
+        z-index: 2;
+    }
+
     #form__flowers-overlay {
         top: 50%;
         left:50%;
